--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./docs/out-tsc",
+    "outDir": "./docs",
     "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
